--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "inih"]
 	path = inih
 	url = https://github.com/benhoyt/inih
+[submodule "parson"]
+	path = parson
+	url = https://github.com/kgabis/parson.git
