--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "parson"]
 	path = parson
 	url = https://github.com/kgabis/parson.git
+[submodule "ulfius"]
+	path = ulfius
+	url = https://github.com/babelouest/ulfius.git
